--- a/package.json
+++ b/package.json
@@ -18,5 +18,9 @@
     "jest": "^27.0.3",
     "ts-jest": "^27.0.1",
     "typescript": "^4.3.2"
+  },
+  "dependencies": {
+    "fs": "^0.0.1-security",
+    "path": "^0.12.7"
   }
 }
